# qqqa

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: RELEASE_NOTES_TEMPLATE.md
releases/: index.json
releases/v0.7.0/: manifest.json
releases/v0.8.1/: manifest.json
releases/v0.8.2/: manifest.json
scripts/: release.sh
src/: ai.rs  clipboard.rs  config.rs  formatting.rs  history.rs  lib.rs  perms.rs  prompt.rs  shell.rs
src/tools/: execute_command.rs  mod.rs  read_file.rs  write_file.rs
tests/: ai_tests.rs  cli_backend_tests.rs  config_tests.rs  history_prompt_tests.rs  perms_tests.rs  tools_tests.rs
tls-test/: README.md  mock_server.py
