[package]
name = "qqqa"
version = "0.8.1"
edition = "2024"
license = "MIT"
description = "qqqa CLI (qq and qa) - fast, stateless LLM in the terminal"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "io-util", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
fs-err = "2.11"
chrono = { version = "0.4", features = ["clock"] }
os_info = "3.7"
atty = "0.2"
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1.6"
nu-ansi-term = "0.50"
shell-words = "1.1"

[features]
default = []

[[bin]]
name = "qq"
path = "src/bin/qq.rs"

[[bin]]
name = "qa"
path = "src/bin/qa.rs"

[dev-dependencies]
tempfile = "3.10"
httpmock = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "io-util"] }
serial_test = "3.1"
